[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Entities/Parts/Hull/EnergyShield.gd" type="Script" id=1]
[ext_resource path="res://scenes/Entities/Parts/Head/head.png" type="Texture" id=2]
[ext_resource path="res://Art/angelchama/shield.png" type="Texture" id=3]
[ext_resource path="res://Art/Laser test/Laser_2.png" type="Texture" id=4]
[ext_resource path="res://Art/Laser test/Laser_3.png" type="Texture" id=5]
[ext_resource path="res://Art/Laser test/Laser_4.png" type="Texture" id=6]
[ext_resource path="res://Art/Laser test/Laser_1.png" type="Texture" id=7]
[ext_resource path="res://Art/Laser test/Laser_5.png" type="Texture" id=8]
[ext_resource path="res://Art/Laser test/Laser_6.png" type="Texture" id=9]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.0120275, 0.0225226 ), 0.0, 4.22017, 0, 0, Vector2( 1, 0.00450456 ), -4.1604, 0.0, 0, 0 ]

[sub_resource type="AnimatedTexture" id=3]
flags = 6
frames = 6
fps = 20.0
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 5 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 6 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 8 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 9 )
frame_5/delay_sec = 0.0

[node name="EnergyShield" type="Node2D"]
script = ExtResource( 1 )

[node name="ShieldSprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.168627 )
material = SubResource( 1 )
scale = Vector2( 2.4266, 2.4266 )
texture = ExtResource( 3 )

[node name="HeadSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="FlashTimer" type="Timer" parent="."]
one_shot = true

[node name="RegenTimer" type="Timer" parent="."]
autostart = true

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 82, -305, 257, -189, 319, 2, 270, 137, 203, 251, 73, 282 )
width = 150.0
width_curve = SubResource( 2 )
default_color = Color( 1, 1, 1, 1 )
texture = SubResource( 3 )
texture_mode = 1
joint_mode = 2

[connection signal="timeout" from="FlashTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]
